--- a/examples/basic/styles.css
+++ b/examples/basic/styles.css
@@ -144,8 +144,8 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #f3f1e7;
 }
-.js-ploly-plot .modebar-btn,
-.github-corner {
+.js-ploly-plot a.modebar-btn,
+a.github-corner {
   box-shadow: none;
   transition: none;
 }
